--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
  <header class="container">
+
     <nav id="primary" class="grid grid-flow-col">
         <div>
             <img src="assets/icons/List.svg" alt="ícone de menu">
@@ -26,7 +27,7 @@
             <img src="assets/icons/MagnifyingGlass.svg" alt="ícone de lupa para pesquisa">
         </div>
     </nav>
-    <nav id="secondar" class="grid grid-flow-col">
+    <nav id="secondary" class="grid grid-flow-col">
         <a href="#">Inteligência Artificial</a>
         <a href="#">Blockchain</a>
         <a href="#">Hologramas</a>
@@ -36,5 +37,19 @@
         <a href="#">Realidade  Virtual</a>
     </nav>
  </header>
+ <main class="container grid">
+    <section id="featured" class="grid grid-flow-col gap-16">
+        <div>
+            <img src="assets/images/Image 01.png" alt="...">
+        </div>
+        <div class="grid grid-cols-2 gap-16">
+            <img src="assets/images/Image 02.png" alt="...">
+            <img src="assets/images/Image 03.png" alt="...">
+            <img src="assets/images/Image 04.png" alt="...">
+            <img src="assets/images/Image 05.png" alt="...">
+        </div>
+    </section>
+ </main>
+
 </body>
-</html>
+</html>...
