applying styles to the most read section of the week

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
     </section>
  </main>
- <section id="weekly">
+ <section class="container" id="weekly">
     <header class="grid grid-flow-col">
         <h3>Mais lidas da semana</h3>
         <a href="#" class="grid grid-flow-col">
